# BaifoxLauncher

./: .gitignore  LICENSE  README.md  package.json  rsbuild.config.ts  tsconfig.json
old-src/: App.vue
old-src/assets/icons/baifoxlauncher-class1/: iconfont.css
old-src/components/main-app/: window_minimzie_component.vue
old-src/layout/main-app/: root_layout_main.vue
old-src/settings/config/: index.ts
old-src/settings/downloads/: index.ts
old-src/settings/language/: language.ts
old-src/settings/login/: index.ts
old-src/settings/running/: index.ts
old-src/settings/variable/: index.ts
old-src/types/: components.d.ts
old-src/views/init-app/: InitViewSteps1.vue  InitViewSteps4.vue  InitViewSteps7.vue  InitViewSteps8.vue  InitViewSteps9.vue
old-src/views/main-app/: DownloadsView.vue  HomeView.vue
src/: App.vue  Init.vue  baifox-main.vue  index.css  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/.baifox/: baifox.ts
src/.baifox/i18n/: index.ts
src/.baifox/plugin/: forwardConsole.ts  index.ts
src/.baifox/router/: index.ts
src/component/icon/: about-view-icon.vue  account-view-icon.vue  game-view-icon.vue  home-view-icon.vue  settings-view-icon.vue
src/components/: window_close_component.vue  window_maximzie_component.vue  window_minimzie_component.vue
src/components/icon/: sider_manu_downloads.vue  sider_menu_gerenzhongxin.vue  sider_menu_settings.vue  sider_meun_about.vue  sider_meun_fenlei.vue  sider_meun_running.vue
src/layout/: main-layout-content.vue  main-layout-header.vue  root_layout_header.vue  root_layout_main.vue
src/plugin/: assets.ts  index.ts
src/router/: index.ts
src/settings/: baifox_setting.ts
src/settings/api/: index.ts
src/settings/config/: index.ts
src/settings/language/: language.ts
src/types/: auto-imports.d.ts  components.d.ts
src/view/: home-view.vue
src/view/about/: about-view.vue
src/view/account/: account-view.vue
src/view/game/: game-view.vue
src/view/settings/: settings-view.vue
src/views/: DownloadsView.vue  HomeView.vue  ProjectView.vue  SettingView.vue
src/views/init-app/: InitViewSteps1.vue  InitViewSteps2.vue  InitViewSteps3.vue  InitViewSteps4.vue  InitViewSteps5.vue  InitViewSteps6.vue
src/views/main-app/: AboutView.vue  AccountView.vue  DownloadsView.vue  HomeView.vue  SettingView.vue
(+37 files in other folders)
