[package]
name = "baifoxlauncher"
version = "0.2.0-beta.1"
description = "A MC Launcher"
authors = ["xiehuqiqi"]
license = "MIT License"
repository = "https://github.com/suhuwenxue/baifoxlauncher/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "baifox_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-upload = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-network = "2.0.4"
tauri-plugin-fs-pro = "2.2.0"
tauri-plugin-system-info = "2.0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
